# x402-sdk

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
python/: README.md  pyproject.toml
python/rail402_x402/: __init__.py  middleware.py  types.py  verify.py
python/tests/: test_requirements.py
src/: client.ts  constants.ts  express.ts  http.ts  index.ts  nextjs.ts  requirements.ts  types.ts  verify.ts
test/: requirements.test.ts  verify.test.ts
