[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rail402-x402"
version = "0.1.0"
description = "Make any REST endpoint x402-payable with USDC on Base. FastAPI middleware + verification."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Rail402" }]
keywords = ["x402", "usdc", "base", "payments", "agent", "rail402", "fastapi"]
dependencies = [
    "web3>=6.0.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110.0", "starlette>=0.36.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/rail402/x402-sdk"
Issues = "https://github.com/rail402/x402-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["rail402_x402"]
